# ducks

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  README_part_2.md  build_docs.sh  dex.pkl  frozen.md  hashbox.py  make_docs.sh  measure_ram.py  mutable.md  noxfile.py  perftest.py  pyproject.toml  run_test_cov.sh  setup.py  tpl.py
.github/: settings.yaml  workflows.md
dbox/: __init__.py  constants.py  exceptions.py  init_helpers.py  pickling.py  utils.py
dev/: btree experiments.ipynb  display.ipynb  frozen.pkl  itree.pkl  measure_ram.py  multi.ipynb  multicolumn.md  munchmark.ipynb  notes.md  perf.ipynb  persist.ipynb  was it worth it.ipynb  wrdl-dev.ipynb
docs/: FrozenHashBox.md  HashBox.md  README.md  bucketing.excalidraw  conf.py  data_structures.md  demos.rst  design.md  ducks.concurrent.rst  ducks.frozen.rst  ducks.mutable.rst  ducks.rst  filterbox.concurrent.rst  filterbox.frozen.rst  filterbox.mutable.rst  filterbox.rst  hashbox.frozen.main.md  hashbox.frozen.rst  hashbox.mutable.main.md  hashbox.mutable.rst  hashbox.rst  how_it_works.rst  index.rst  modules.rst  quick_start.rst  requirements.txt
ducks/: __init__.py  btree.py  constants.py  exceptions.py  pickling.py  utils.py
examples/: collision.py  concurrent_perf.ipynb  crossword.py  match_list.py  missing_function.py  nested_attributes.py  pandas_index.py  percentile.py  perf.ipynb  perf_demo.ipynb  spatial.py  update.py  wordle.ipynb
filterbox/: __init__.py  btree.py  constants.py  exceptions.py  init_helpers.py  pickling.py  utils.py
filtered/: __init__.py  init_helpers.py  utils.py
hashbox/: __init__.py  exceptions.py  init_helpers.py  utils.py
hashindex/: __init__.py  constants.py  exceptions.py  frozen.py  frozen_buckets.py  frozen_field.py  hashindex.py  init_helpers.py  mutable.py  mutable_bucket_manager.py  mutable_buckets.py  mutable_field.py  mutable_idx.py  utils.py
matchindex/: __init__.py  matchindex.py
notebooks/: BTree vs SortedDict.ipynb  NOTES.md  Overhau.ipynb  bucket lab.ipynb  container_sizes.py  fruits.ipynb  fstats  inverted index test.ipynb  measure_ram.py  mutable blocked arrays.ipynb  perftest.py  planning.ipynb  postgres frozen.ipynb  postgres mutable.ipynb  postgres.ipynb  ram lookup build stats.ipynb  speed_test_hash_collision.ipynb  stale moves.ipynb  test.pkl  test_k_way_merges.ipynb  test_stuff_here.ipynb  timings.ipynb  wordle.ipynb  wordle.py  words.py
perf_test/: NOTES.md  arrcompare.py  container_sizes.py  containerperf.py  measure_ram.py  numpyset.ipynb  perftest.py  planning.ipynb  wordle.ipynb  wordle.py  words.py
sphinx/: conf.py
src/: matchindex.py
test/: conftest.py  cov.txt  perftest.py  test_basic_operations.py  test_btree.py  test_container_ops.py  test_edge_cases.py  test_examples.py  (+19 more)
(+110 files in other folders)
