[tool.poetry]
name = "ducks"
version = "0.5.1"
description = "Provides Dex, a Python container for indexing objects of any type."
authors = ["Theo Walker <theo.ca.walker@gmail.com>"]
license = "MIT"
repository = "https://github.com/manimino/ducks/"
documentation = "https://pypi.org/project/ducks/"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
cykhash = "^2.0.0"
numpy = "^1.14"
readerwriterlock = "^1.0.9"
sortednp = "^0.4.0"
BTrees = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
