[tool.poetry]
name = "ducks"
version = "0.5.1"
description = "Provides Dex, a Python container for indexing objects of any type."
authors = ["Theo Walker <theo.ca.walker@gmail.com>"]
license = "MIT"
repository = "https://github.com/manimino/ducks/"
documentation = "https://pypi.org/project/ducks/"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
cykhash = "^2.0.0"
numpy = "^1.14"
readerwriterlock = "^1.0.9"
sortednp = "^0.4.0"
BTrees = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
coverage = "^6.4.4"
safety = "^2.1.1"
pre-commit = "^2.20.0"
black = "^22.6.0"
darglint = "^1.8.1"
reorder-python-imports = "^3.8.3"
pre-commit-hooks = "^4.3.0"
pyupgrade = "^2.38.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
bandit = "^1.7.4"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-n 4 --ignore examples --cov=ducks --cov-report=term-missing --cov-fail-under 99"

[tool.bandit]
exclude= "tests/ examples/ docks/ dev/"
